Uplift dep, gradle, Java to 25, refactor tests